# manyears

./: README.md  _config.yml  index.html  params.json
manyears/: CMakeLists.txt  COPYING  INSTALL  Makefile.am  ManyEars.spec.in  README  TODO  acinclude.m4  autogen.sh  configure.in  start_manyears.sh
manyears-C/: CMakeLists.txt  COPYING.TXT  GUIv3.pro  INTROLAB-ManyEars.cbp  Info.plist  ManyEars.icns  ManyEars.plist  PlotBeamformerLatitude.cpp  PlotBeamformerLongitude.h  PlotLatitude.cpp  README.TXT  aboutDialog.h  algorithmCore.h  audioManager.cpp  audioManager.h  colorID.cpp  colorID.h  colorPalette.h  configurationLoadSave.cpp  configurationLoadSave.h  configurationVector.cpp  coreThread.cpp  graph2D.h  graph3D.h  inputOutputManager.cpp  inputOutputManager.h  listProperty.cpp  listProperty.h  manyearsObj.h  mdiWindow.h  parametersManager.h  plotLatitude.h  potentialSourceManager.cpp  property.cpp  propertyEditor.cpp  propertyEditor.h  scrollListProperty.h  source.cpp  sourceBuffer.cpp  sourceGenerator.cpp  (+12 more)
manyears-C/Configuration_Vectors/: vector14.mes
manyears-C/Qt4GUI/: CMakeLists.txt  COPYING.TXT  PlotBeamformerLatitude.h  PlotBeamformerLongitude.cpp  PlotLongitude.cpp  README.TXT  aboutDialog.cpp  aboutDialog.h  colorPalette.cpp  configurationVector.h  coreThread.cpp  inputOutputManager.cpp  inputOutputManager.h  main.cpp  manyearsObj.cpp  mdiSubWindow.h  parametersManager.cpp  parametersManager.h  plot.cpp  plotLongitude.h  potentialSourceVector.h  property.h  propertyEditor.cpp  soundInputConfig.cpp  soundInputConfig.h  sourceEvents.cpp  sphereObj.cpp  spherePlot.cpp  trackedSourceManager.cpp  trackedSourceManager.h  winBeamformerLatitude.h  winLatitude.h  winSphere.cpp  winSphere.h  window.cpp
manyears-C/Qt4GUI/Configuration_Vectors/: HRIDemo.mes  default.mes
manyears-C/QtGUI/: CMakeLists.txt  StreamOutputWidget.cpp  StreamOutputWidget.h  StreamOutputWidget.ui  aboutDialog.cpp  algorithmCore.cpp  coreThread.cpp  coreThread.h  graph2D.cpp  graph2D.h  graph3D.cpp  graph3D.h  inputOutputManager.cpp  inputOutputManager.h  main.cpp  mdiSubWindow.cpp  mdiWindow.cpp  mdiWindow.h  parametersManager.cpp  parametersManager.h  plot.h  potentialSource.cpp  potentialSource.h  potentialSourceManager.h  potentialSourceVector.cpp  propertyEditor.cpp  resources.qrc  scrollListProperty.cpp  source.h  sourceBuffer.cpp  sourceBuffer.h  sourceEvents.cpp  sourceEvents.h  sourceManager.cpp  sphereObj.cpp  sphereObj.h  trackedSourceVector.h  winBeamformerLongitude.cpp  winLongitude.cpp
manyears-C/QtGUI/Configuration_Vectors/: HRIDemo.mes  (+3 more)
manyears-C/RTAudio/: CMakeLists.txt  asiolist.cpp
manyears-C/demo/: CMakeLists.txt  manyears_demo.c
manyears-C/dsplib/: CMakeLists.txt  beamformer.c  beamformer.h  compensator.c  compensator.h  dynamicMemory.c  dynamicMemory.h  fft.c  fft.h  filter.c  filter.h  hardware.h  iodisk.c  iodisk.h  mathadvanced.h  micSoundTrack.c  micSoundTrack.h  mixture.c  mixture.h  overallContext.c  overallContext.h  parameters.c  parameters.h  potentialSources.c  potentialSources.h  randGen.c  randGen.h  sphere.c  sphere.h  sseTest.c  trackedSources.c  trackedSources.h
manyears-C/example/: CMakeLists.txt  fft_test.cpp  manyears_console.c  manyears_iterative.c  manyears_live.cpp
manyears-C/macros/: FindJack.cmake  FindQtMobility.cmake
manyears-C/package/: CMakeLists.txt
manyears-flowdesigner/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  start_manyears.sh
manyears-flowdesigner/GUI/: DefaultImage.xpm  FDReader.cpp  QtProbeAudioViewer.cpp  QtProbeAudioViewer.h  SNCRZ30Cam.cpp  TrackAudioWidget.cpp  TrackAudioWidget.h  audioview.cpp  audioview.h
manyears-flowdesigner/ManyEars3D/: CMakeLists.txt  EqualGains3D.cc  Localize3D.cc  SourceTrack3D.cc  TrackingDecision3D.cc
manyears-flowdesigner/cameraBridge/: MainWindow.ui
manyears-flowdesigner/config/: cube_mic_pos.mat  planar_mic_pos.mat
manyears-flowdesigner/macros/: FindFFTW3.cmake
manyears-flowdesigner/n-files/: localization.n  speex.n  start_manyears.bat  track_sources.n  tracking3D.n
manyears-flowdesigner/sphinx4/: CMakeLists.txt  config.xml
manyears-flowdesigner/src/: CMakeLists.txt  EqualGains.cc  SaveAudioStreamTCP.cc  SaveRawAudio.cc  SaveSpeex.cc  SeparGSS.cc  ServerSave.cc  SourceInfo.cc  SourceInfo.h  SourceTrack.cc  alsadevice.cpp  audio_client.cc  audio_server.cc  audio_server2.cc  info.cc  openStream.cc  particles.cc  play_client.cc  solver.h
manyears-flowdesigner/tools/: ManyEars_Setup.nsi
manyears/GUI/: AudioSource.h  CMakeLists.txt  DefaultImage.xpm  FDReader.cpp  FDReader.h  ImageView.cpp  ImageView.h  Makefile.am  QtProbeAudioViewer.cpp  QtProbeAudioViewer.h  SNCRZ30Cam.cpp  SNCRZ30Cam.h  SourceInfo.cpp  SourceInfo.h  TrackAudioWidget.cpp  TrackAudioWidget.h  audioview.cpp  audioview.h  main.cpp
manyears/ManyEars3D/: CMakeLists.txt  Localize3D.cc  SteeringVector3D.cc  particles3D.cc  particles3D.h
manyears/MicrophoneArrayKit/: LICENSE.TXT
manyears/cameraBridge/: CMakeLists.txt  CameraBridge.cpp  CameraBridge.h  MainWindow.ui  Makefile  cameraBridge  cmake_install.cmake  main.cpp
manyears/config/: Makefile.am  planar_mic_pos.mat  robot_mic_pos.mat
manyears/macros/: FindAlsa.cmake  FindFFTW3.cmake  FindLibXml2.cmake
manyears/n-files/: LocalizeOSC.n  LocalizeSeparAndSaveTCP.n  LocalizeSeparAndSaveWav.n  LocalizeSeparAndSaveWavWin32.n  Makefile.am  TestSphinx.n  localize.n  separation_spl_coque_raw.n  start_manyears.bat  tracking3D.n
manyears/sphinx4/: CMakeLists.txt  README  Sphinx4TcpServer.java  digits.gram
manyears/src/: AudioServer.cc  AudioServer.h  CMakeLists.txt  LocalizeBeam.cc  Makefile.am  Map.h  QtTCPBinarySend.cc  RtAudio.cpp  RtAudio.h  SaveAudioStreamTCP.cc  SaveSources.cc  SaveSpeex.cc  SaveWav.cc  SaveWavWin32.cc  ServerSaveRaw.cc  ServerSaveSpeex.cc  ServerSaveWav.cc  SoundMap.cc  SourceInfo.cc  SourceInfo.h  SourceTrack.cc  UDPOSCOut.cc  alsadevice.h  conj_window.cc  conj_window.h  info.cc  openStream.cc  particles.cc  particles.h  speex_play.sh  sphere.cc  sphere.h  sphinx_server.cc
manyears/tools/: CMakeLists.txt  ManyEars_Setup.nsi
(+89 files in other folders)
