## Process this file with automake to produce Makefile.in. -*-Makefile-*-

# $Id: Makefile.am,v 1.4 2006-06-13 18:23:51 dominic Exp $

# Disable automatic dependency tracking if using other tools than gcc and gmake
#AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = src n-files config GUI

DIST_SUBDIRS = src n-files config GUI

bin_SCRIPTS = start_manyears.sh

EXTRA_DIST = CMakeLists.txt ManyEars.spec.in ManyEars.spec $(bin_SCRIPTS)

